src/test/c/accept/36-class-inheritance-implements.arcx
class Hijo is Padre using MiInterfaz, OtraInterfaz {
    foo: int = 1;
} 