src/test/c/reject/15-invalid-class-header.arcx
class { 
    abc: int = 1;
} 